2011-09-29 Otavio Pontes <obusatto@br.ibm.com>

	Related to bug #353056
	* src/org/eclipse/linuxtools/internal/valgrind/launch/ValgrindLaunchConfigurationDelegate.java:
	Using factories from org.eclipse.linuxtools.tools.launch.core to run
	valgrind commands.

2011-09-28 Otavio Pontes <obusatto@br.ibm.com>

	Related to bug #353056
	* src/org/eclipse/linuxtools/internal/valgrind/launch/ValgrindLaunchPlugin.java:
	Removing dependency for ValgrindPreferencePage

2011-10-12  Jeff Johnston  <jjohnstn@redhat.com>

	Bug #360085 - apply Martin Oberhuber's patch and add remove marker capability.
	
	* plugin.xml: Add clear markers command button in Valgrind view.
	* plugin.properties: New messages for clear markers command.
	* src/org/eclipse/linuxtools/internal/valgrind/launch/ClearMarkersHandler.java: New file.
	* src/org/eclipse/linuxtools/internal/valgrind/launch/ValgrindLaunchConfigurationDelegate.java (finalLaunchCheck): Clear
	markers on new launch.

2011-09-08  Jeff Johnston  <jjohnstn@redhat.com>

	Bug #354342
	
	2011-09-08  Martin Oberhuber  <martin.oberhuber@windriver.com>
	* src/org/eclipse/linuxtools/internal/valgrind/launch/ValgrindOptionsTab.java (setValgrindVersion): New method.
	(getValgrindVersion): Ditto.

2011-08-15  Jeff Johnston  <jjohnstn@redhat.com>

	* src/org/eclipse/linuxtools/internal/valgrind/launch/ValgrindLaunchConfigurationDelegate.java: 
	(getValgrindArgumentsArray): Add check when dealing with versioned options to omit them if they
	are the default.

2011-05-20  Jeff Johnston  <jjohnstn@redhat.com>

	* src/org/eclipse/linuxtools/internal/valgrind/launch/ValgrindExportWizardPage.java (isValid): Add
	check for there being an array of launch files that is 0 in length.

2011-01-06  Elliott Baron  <ebaron@fedoraproject.org>

	Bug #333640
	* src/org/eclipse/linuxtools/internal/valgrind/launch/ValgrindLaunchPlugin.java: Added 3.5, 3.6 version strings.
	* src/org/eclipse/linuxtools/internal/valgrind/launch/ValgrindLaunchConfigurationDelegate.java