@@ -1,3 +1,9 @@
+2011-10-05 Otavio Pontes <obusatto@br.ibm.com>
+	
+	Related to bug #353056
+	* src/org/eclipse/linuxtools/internal/valgrind/memcheck/tests/MinVersionTest.java:
+	Fixing tests broken by commit that uses	tools.launch.core factories.
+
 2011-09-29 Otavio Pontes <obusatto@br.ibm.com>
 
 	Related to bug #353056
